:bug: fix line-limit not-visible adding a vaderish color

--- a/styles/base.less
+++ b/styles/base.less
@@ -13,7 +13,7 @@ atom-text-editor {
   }
 
   .wrap-guide {
-    background-color: @color-invisibles;
+    background-color: @color-line-limit;
   }
 
   .indent-guide,
