--- a/styles/settings/colors.less
+++ b/styles/settings/colors.less
@@ -19,6 +19,7 @@
 @color-background: @color-gray-darker;
 @color-selection: lighten(@color-background, 8%);
 @color-invisibles: @color-background;
+@color-line-limit: fade(@color-vader, 50%);
 @color-keyword: @color-yoda;
 @color-constant: @color-luke;
 @color-regexp: @color-luke;
